# specscout

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: specscout_paper.ipynb  specscout_processing.ipynb  specscout_tutorial.ipynb
scripts/: download_goes_xrs.sh
slurm/: sbatch_specscout_ingest.sh  sbatch_specscout_roi_parallel.sh
src/specscout/: cli.py  core.py  dataset.py  ingest.py  outlier.py  patches.py  preprocess.py  roi.py  roi_search.py  rolling.py  viz.py
src/specscout/viz/: __init__.py  interactive.py  static.py
